# CentraalInsolventieregister

./: .gitignore  README.md  cir.py  main.py  pyproject.toml
centraalinsolventieregister/: client.py  main.py  rspublic_ws_insolvency_content_with_reports03.py  rspublic_ws_insolvency_requests.py  rspublic_ws_insolvency_response_list01.py
docs/: RSpublicWS_InsolvencyContent03.xsd  RSpublicWS_InsolvencyContentWithReports03.xsd  RSpublicWS_InsolvencyReports02.xsd
tests/: test_client.py
